modal alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -920,7 +920,7 @@ h1.main-text {
 	.transform-text {
 		line-height: 1.2;
 		letter-spacing: 0.7px;
-		font-size: 3.5vw;
+		font-size: 2.3vw;
 		font-weight: 500;
 		text-align: center;
 	}
